<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >
    
 <TextView
        android:id="@+id/pdtNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdtName"
        android:textColor="#000000"
        android:textSize="@dimen/pdtNametextSize" >
    </TextView>
    
     <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="430dp"
        android:gravity="center"
        android:onClick="activity_main"
        android:text="@string/menu" >
    </Button>

<!--    <ImageButton
        android:id="@+id/pdtImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/welcomescreen" >
    </ImageButton>
 -->   
     <ImageView android:id="@+id/image"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_margin="10dip"/>
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/white" >

        <Button
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" 
            android:layout_weight="1"
            android:onClick="pdttotalpriceview"
            android:textSize="23sp"
            android:text="@string/totalPrice"
            android:textStyle="bold" />

        <Button
            android:id="@+id/priceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight=".20"
            android:onClick="pdtpriceview"
            android:text="@string/price"
             />

        <Button
            android:id="@+id/stockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:gravity="center"
            android:onClick="pdtstockview"
            android:text="@string/stock" >
        </Button>

        <Button
            android:id="@+id/shippingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:gravity="center"
            android:onClick="pdtshippingpriceview"
            android:text="@string/shipping" >
            </Button>
    </LinearLayout>
    
    <!-- <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange" >

        <TextView
            android:id="@+id/merchant1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="42dp"
            android:text="@string/merchant1"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant1TotalPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="42dp"
            android:text="@string/merchant1TotalPrice"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="82dp"
            android:text="@string/merchant2"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant2TotalPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="82dp"
            android:text="@string/merchant2TotalPrice"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="122dp"
            android:text="@string/merchant3"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant3TotalPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="122dp"
            android:text="@string/merchant3TotalPrice"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant4TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="162dp"
            android:text="@string/merchant4"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant4TotalPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="162dp"
            android:text="@string/merchant4TotalPrice"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>
        
        <Button
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:onClick = "activity_main"
            android:text="@string/menu" >
        </Button>

    </RelativeLayout>
    -->
         <ListView android:id="@id/android:list" 
      android:layout_width="fill_parent" 
      android:layout_height="fill_parent"
      android:background="@android:color/white"
      
       />    
</LinearLayout>
